Cambio de veersion del bootstrap
Se cambio la version del bootstrap a la 4.5.2, el formulario de contacto todavía tiene errores en sus estilos

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -305,3 +305,16 @@
     color: #000;
     text-decoration: none;
 }*/
+
+/**
+css validacion
+ */
+.has-error .checkbox, .has-error .checkbox-inline, .has-error .control-label, .has-error .help-block, .has-error .radio, .has-error .radio-inline, .has-error.checkbox label, .has-error.checkbox-inline label, .has-error.radio label, .has-error.radio-inline label {
+    color: #a94442;
+}
+.help-block {
+    display: block;
+    margin-top: 5px;
+    margin-bottom: 10px;
+    font-size: 11px;
+}
