Actualización del formulario
Actualización del envió del formulario de contacto

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -163,76 +163,49 @@
     height: auto;
     z-index: 9999;
 }
-.wrapper {
-    padding: 40px;
-    box-sizing: border-box;
-    background: #fff;
-    box-shadow: 0 10px 30px rgba(12, 380, 80, .5);
-    border-radius: 20px;
-}
-.wrapper h2 {
-    color: #666;
-    margin: 0;
-    padding: 0;
-    text-align: center;
-    font-size: 30px;
-    text-transform: uppercase;
-}
-.input-field {
-    position: relative;
-    width: 100%;
-    margin-top: 5px;
-}
-.input-field input, .input-field textarea {
-    width: 100%;
-    padding: 5px 0;
-    box-sizing: border-box;
-    background: transparent;
-    border: none;
-    outline: none;
-    border-bottom: 2px solid #666;
-    font-size: 16px;
-    color: #666;
-    font-weight: 700;
-    resize: none;
-}
-.input-field label {
-    position: absolute;
-    top: 0;
-    left: 0;
-    padding: 5px 0;
-    pointer-events: none;
-    font-size: 16px;
-    color: #666;
-    font-weight: 700;
-    transition: 0.5s;
-}
-.input-field input:focus+label, .input-field textarea:focus+label, .input-field input:valid+label, .input-field textarea:valid+label {
-    top: -25px;
-    font-size: 14px;
-    padding: 2px 5px;
-    background: #375D96;
-    color: #fff;
-    border-radius: 6px;
-}
-.btn-enviar {
-    margin-top: 20px;
-    background: #375d96;
-    color: #fff;
-    padding: 10px 20px;
-    border: none;
-    outline: none;
-    border-radius: 30px;
-    font-weight: 700;
-    text-transform: uppercase;
-    font-size: 16px;
-    transition: 0.5s;
-    float: right;
-}
-.btn-enviar:hover {
-    background: #72A3D1;
-    color: #375d96;
-}
+            .box{
+            width: auto;
+            background: #fff;
+            padding: 40px;
+            box-sizing: border-box;
+            border-radius: 10px;
+            border: 1px solid rgba(0,0,0,.1);
+            box-shadow: 0 5px 10px rgba(0,0,0,.9);
+            }
+            .box form input{
+                width: 100%;
+                padding: 10px 0;
+                margin-bottom: 30px;
+            }
+            .box form textarea{
+                height: 80px;
+                padding: 10px 0;
+                margin-bottom: 40px;
+            }
+            .box form input, .box form textarea{
+                width: 100%;
+                box-sizing: border-box;
+                box-shadow: none;
+                outline: none;
+                border: none;
+                /*padding-left: 20px;*/
+                border-bottom: 1px solid #2C4B8A;
+            }
+            .input-box{
+                position: relative;
+            }
+            .input-box span{
+                position: absolute;
+                top: 10px;
+                color: #2C4B8A;
+            }
+            .box form textarea{
+                margin-bottom: 20px;
+            }
+            /*.box input:focus, .box textarea:focus, .box input:valid, .box textarea:valid{
+                border-bottom: 2px solid #FD020E;
+            }      */
+
 .map {
     margin-top: 1px;
 }
