--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,6 +2,18 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Abril Fatface', cursive;
+}
+#carrusel {
+    margin: 30px auto;
+}
+#carrusel .item {
+    background: none;
+    height: 260px;
+}
+#carrusel .item img {
+    min-width: 260px;
+    height: auto;
 }
 .header-area {
     background: none repeat scroll 0 0 #152F4F;
@@ -87,7 +99,7 @@
     margin-top: 10px;
     text-align: center;
     margin-bottom: 15px;
-    text-shadow: 0 2px 2px rgba(0, 0, 0);
+    /*text-shadow: 0 2px 2px rgba(0, 0, 0);*/
 }
 .titulo {
     text-transform: uppercase;
@@ -97,7 +109,7 @@
     margin-top: 10px;
     text-align: center;
     margin-bottom: 15px;
-    text-shadow: 0 2px 2px rgba(0, 0, 0);
+    /*text-shadow: 0 2px 2px rgba(0, 0, 0);*/
 }
 .subtitulo {
     text-transform: uppercase;
@@ -107,7 +119,7 @@
     margin-top: 10px;
     text-align: center;
     margin-bottom: 15px;
-    text-shadow: 0 2px 2px rgba(0, 0, 0);
+    /*text-shadow: 0 2px 2px rgba(0, 0, 0);*/
 }
 .slider-contenido {
     font-weight: 700;
@@ -116,7 +128,7 @@
     margin-top: 10px;
     text-align: center;
     margin-bottom: 15px;
-    text-shadow: 0 2px 2px rgba(0, 0, 0);
+    /*text-shadow: 0 2px 2px rgba(0, 0, 0);*/
 }
 .card {
     border-radius: 10px;
@@ -148,13 +160,13 @@
 .modal-header h3, h4 {
     font-weight: 400;
     color: white;
-    text-shadow: 0 2px 2px rgba(0, 0, 0);
+    /*text-shadow: 0 2px 2px rgba(0, 0, 0);*/
 }
 #whatsapp a {
     background: none;
     position: fixed;
-    top: 90%;
-    right: 2%;
+    top: 83%;
+    right: 3%;
     width: 50px;
     height: 50px;
 }
@@ -163,46 +175,46 @@
     height: auto;
     z-index: 9999;
 }
-            .box{
-            width: auto;
-            background: #fff;
-            padding: 40px;
-            box-sizing: border-box;
-            border-radius: 10px;
-            border: 1px solid rgba(0,0,0,.1);
-            box-shadow: 0 5px 10px rgba(0,0,0,.9);
-            }
-            .box form input{
-                width: 100%;
-                padding: 10px 0;
-                margin-bottom: 30px;
-            }
-            .box form textarea{
-                height: 80px;
-                padding: 10px 0;
-                margin-bottom: 40px;
-            }
-            .box form input, .box form textarea{
-                width: 100%;
-                box-sizing: border-box;
-                box-shadow: none;
-                outline: none;
-                border: none;
-                /*padding-left: 20px;*/
-                border-bottom: 1px solid #2C4B8A;
-            }
-            .input-box{
-                position: relative;
-            }
-            .input-box span{
-                position: absolute;
-                top: 10px;
-                color: #2C4B8A;
-            }
-            .box form textarea{
-                margin-bottom: 20px;
-            }
-            /*.box input:focus, .box textarea:focus, .box input:valid, .box textarea:valid{
+.box {
+    width: auto;
+    background: #fff;
+    padding: 40px;
+    box-sizing: border-box;
+    border-radius: 10px;
+    border: 1px solid rgba(0, 0, 0, .1);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, .9);
+}
+.box form input {
+    width: 100%;
+    padding: 10px 0;
+    margin-bottom: 30px;
+}
+.box form textarea {
+    height: 80px;
+    padding: 10px 0;
+    margin-bottom: 40px;
+}
+.box form input, .box form textarea {
+    width: 100%;
+    box-sizing: border-box;
+    box-shadow: none;
+    outline: none;
+    border: none;
+    /*padding-left: 20px;*/
+    border-bottom: 1px solid #2C4B8A;
+}
+.input-box {
+    position: relative;
+}
+.input-box span {
+    position: absolute;
+    top: 10px;
+    color: #2C4B8A;
+}
+.box form textarea {
+    margin-bottom: 20px;
+}
+/*.box input:focus, .box textarea:focus, .box input:valid, .box textarea:valid{
                 border-bottom: 2px solid #FD020E;
             }      */
 
@@ -267,10 +279,10 @@
 .footer .copyright p {
     border-top: 1px solid rgba(255, 255, 255, 0.1);
 }
-.footer h4{
+.footer h4 {
     font-weight: 300;
     color: white;
-    text-shadow: 0 2px 2px rgba(0, 0, 0);
+    /*text-shadow: 0 2px 2px rgba(0, 0, 0);*/
 }
 /*#lista li {
     position: relative;
@@ -282,6 +294,7 @@
 /**
 css validacion
  */
+
 .has-error .checkbox, .has-error .checkbox-inline, .has-error .control-label, .has-error .help-block, .has-error .radio, .has-error .radio-inline, .has-error.checkbox label, .has-error.checkbox-inline label, .has-error.radio label, .has-error.radio-inline label {
     color: #a94442;
 }
